--- a/oss/index.html
+++ b/oss/index.html
@@ -1,1 +1,164 @@
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Upptäck Inspirerande Citat – en plattform dedikerad till att sprida visdom, motivation och inspiration för personlig utveckling.">
+    <meta name="keywords" content="inspirerande citat, motivation, visdom, personlig utveckling, citat svenska">
+    <meta name="author" content="Inspirerande Citat">
+    <title>Om Oss | Inspirerande Citat</title>
+    <style>
+        :root {
+            --primary-color: #1a73e8;
+            --secondary-color: #34a853;
+            --text-color: #202124;
+            --background-color: #f1f3f4;
+            --card-background: #ffffff;
+        }
 
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            line-height: 1.6;
+            color: var(--text-color);
+            background-color: var(--background-color);
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 30px;
+            padding: 20px;
+            background-color: var(--card-background);
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            border-radius: 8px;
+        }
+
+        header h1 {
+            color: var(--primary-color);
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+        }
+
+        .content {
+            background-color: var(--card-background);
+            border-radius: 10px;
+            padding: 30px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            margin-bottom: 30px;
+        }
+
+        .content h2 {
+            color: var(--primary-color);
+            margin-bottom: 20px;
+            border-bottom: 2px solid var(--primary-color);
+            padding-bottom: 10px;
+        }
+
+        .team-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .team-member {
+            background-color: var(--background-color);
+            border-radius: 8px;
+            padding: 20px;
+            text-align: center;
+            transition: transform 0.3s ease;
+        }
+
+        .team-member:hover {
+            transform: translateY(-5px);
+        }
+
+        .team-member img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 15px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: var(--card-background);
+            border-radius: 8px;
+        }
+
+        @media (max-width: 768px) {
+            .team-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Om Inspirerande Citat</h1>
+        <p>Vår mission är att sprida visdom och motivation</p>
+    </header>
+
+    <main>
+        <section class="content">
+            <h2>Vår Berättelse</h2>
+            <p>Inspirerande Citat föddes ur en passion för personlig utveckling och en övertygelse om kraften i visdom. Vi tror att rätt ord vid rätt tidpunkt kan förändra liv, inspirera handling och skapa djupare förståelse.</p>
+            
+            <p>Vårt mål är enkelt men kraftfullt: att samla de mest insiktsfulla och transformativa citaten från historiens största tänkare, filosofer, forskare och ledare. Vi vill skapa en plattform där människor kan hitta daglig inspiration, motivation och kunskap.</p>
+        </section>
+
+        <section class="content">
+            <h2>Vårt Team</h2>
+            <div class="team-grid">
+                <div class="team-member">
+                    <img src="https://unsplash.it/150/150?random=1" alt="Sofia Lindberg - Grundare & Chefredaktör">
+                    <h3>Sofia Lindberg</h3>
+                    <p>Grundare & Chefredaktör</p>
+                    <p>Passionerad skribent och inspirationsexpert</p>
+                </div>
+                <div class="team-member">
+                    <img src="https://unsplash.it/150/150?random=2" alt="Erik Andersson - Teknisk Chef">
+                    <h3>Erik Andersson</h3>
+                    <p>Teknisk Chef</p>
+                    <p>Innovations- och teknikentusiast</p>
+                </div>
+                <div class="team-member">
+                    <img src="https://unsplash.it/150/150?random=3" alt="Maja Karlsson - Innehållsansvarig">
+                    <h3>Maja Karlsson</h3>
+                    <p>Innehållsansvarig</p>
+                    <p>Forskare och kuratör av historiska citat</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="content">
+            <h2>Våra Värderingar</h2>
+            <ul>
+                <li>📚 <strong>Kunskap:</strong> Vi tror på livslångt lärande</li>
+                <li>💡 <strong>Inspiration:</strong> Varje citat har potential att förändra perspektiv</li>
+                <li>🤝 <strong>Inkludering:</strong> Visdom känner inga gränser</li>
+                <li>🌱 <strong>Personlig Utveckling:</strong> Kontinuerlig tillväxt är nyckeln till framgång</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2024 Inspirerande Citat. Alla rättigheter förbehålls.</p>
+        <div style="margin-top: 10px;">
+            <a href="/integritet">Integritetspolicy</a> | 
+            <a href="/kontakt">Kontakt</a> | 
+            <a href="/sitemap.xml">Sitemap</a>
+        </div>
+    </footer>
+</body>
+</html>
